css/main.css
@import url("https://fonts.googleapis.com/css2?family=Graduate&family=Open+Sans:wght@400&display=swap");

:root {
  --primary-color: #524c49;
  --secondary-color: gold;
  --tertiary-color: white;
  --border-radius: 2px;
}

html {
  font-size: 80%;
}

@media only screen and (min-width: 960px) {
  html {
    font-size: 95%;
  }
}

@media only screen and (min-width: 1250px) {
  html {
    font-size: 100%;
  }
}

body {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  overflow: auto;
  min-height: 100vh;
  width: 100vw;
  padding: 2rem;
  max-width: 100%;
  margin: 0;
  background: url("/images/indexbg.jpg") no-repeat center center fixed;
  font-family: "Open Sans", sans-serif;
  font-size: 1rem;
}

/* TYPOGRAPHY */

h1,
h2,
h3,
h4 {
  margin-bottom: 1rem;
  font-family: "Graduate", cursive;
  line-height: 1;
}

h1 {
  font-size: 2.2rem;
}

h2 {
  font-size: 1.8rem;
}

h3 {
  font-size: 1.6rem;
}

h4 {
  font-size: 1.2rem;
}

p {
  margin-bottom: 0.5rem;
}

a {
  color: #60530b;
  text-decoration: underline;
}

a:hover {
  cursor: pointer;
}

/* FORMS */

.button {
  display: inline-block;
  width: auto;
  padding: 1rem 1.5rem;
  background: var(--primary-color);
  text-decoration: none;
  color: white;
  border: 2px solid transparent;
  border-radius: var(--border-radius);
  transition: all 0.1s ease-out;
}

.button:hover {
  cursor: pointer;
  color: var(--secondary-color);
  border-color: var(--secondary-color);
}

input[type="text"] {
  width: 100%;
  padding: 1rem 0.75rem;
  background: white;
  border: 0;
  border-radius: var(--border-radius);
  outline: 2px solid transparent;
  transition: all 0.1s ease-out;
}

input[type="text"]:focus {
  outline-color: var(--secondary-color);
}

input[type="checkbox"] {
  width: 20px;
  height: 20px;
  margin-right: 0.5rem;
}

::placeholder {
  color: lightgrey;
  opacity: 1;
}

:-ms-input-placeholder {
  color: lightgrey;
}

::-ms-input-placeholder {
  color: lightgrey;
}

fieldset {
  border: none;
  margin: 0;
  padding: 0;
}

label:hover {
  cursor: pointer;
}

.input-group {
  margin-bottom: 1rem;
}

.input-group label {
  display: inline-block;
  margin-bottom: 0.25rem;
  color: var(--primary-color);
}

.input-group--row {
  display: flex;
  align-items: center;
}

/* HEADER AND FOOTER */

.header {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin-bottom: 2rem;
}
@media only screen and (min-width: 960px) {
  .header {
    flex-direction: row;
    align-items: flex-start;
    justify-content: space-between;
  }
}

.logo {
  margin-bottom: 1rem;
  font-size: 1.8rem;
  max-width: 100%;
  word-break: break-all;
}
@media only screen and (min-width: 960px) {
  .logo {
    margin-bottom: 0;
    font-size: 2.2rem;
  }
}

.footer {
  margin-top: 2rem;
  font-size: 0.9rem;
  text-align: center;
}

.footer__visitors {
  display: inline-block;
  border: 1px solid var(--primary-color);
  border-left: none;
  border-right: none;
  padding: 0.5rem 1rem;
}

.footer__small {
  margin-top: 1rem;
  font-size: 0.8rem;
}

/* INDEX */

.upload {
  margin-bottom: 1rem;
}

.uploads {
  text-align: center;
  margin-top: 3rem;
}

.uploads__tables {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;

  margin: 0 auto;
}

table {
  width: auto;
  margin: 1rem 1rem 2rem 1rem;
  font-size: 0.9rem;
  border-radius: 4px;
  background-color: rgba(255, 255, 255, 0.2);
  -webkit-backdrop-filter: blur(10px);
  backdrop-filter: blur(10px);
  border-collapse: collapse;
}

table td,
table th {
  text-align: center;
}

thead {
  font-weight: bold;
  border-bottom: 1px solid grey;
}

thead th {
  padding: 0.5rem;
  white-space: nowrap;
  background: var(--primary-color);
  color: white;
  border-bottom: 1px solid var(--secondary-color);
}
@media only screen and (min-width: 1250px) {
  thead th {
    padding: 1rem;
  }
}

tbody td {
  padding: 1rem;
}

/* UPLOAD */

.upload-form {
  width: 500px;
  max-width: 100%;
  margin: 0 auto;
}

.upload-form section {
  margin-bottom: 4rem;
}

.upload-form__background input {
  visibility: hidden;
}

.upload-form__background label {
  display: block;
  padding: 1rem;
  border: 2px solid transparent;
  opacity: 0.5;
  border-radius: var(--border-radius);
  transition: all 0.2s ease-out;
}

.upload-form__background input:checked ~ label {
  background: white;
  border-color: var(--secondary-color);
  opacity: 1;
}

.upload-form__background fieldset {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.upload-form__background fieldset div {
  width: 50%;
  text-align: center;
}

.upload-form__background fieldset div img {
  margin: 0 auto;
}

